Fix: Dark mode on modals

--- a/client/src/style/darktheme.css
+++ b/client/src/style/darktheme.css
@@ -87,7 +87,8 @@
 .darktheme .add-task-heading,
 .darktheme .add-task-points-heading,
 .darktheme .convo-card .personal-info .name,
-.darktheme .tu-heading {
+.darktheme .tu-heading,
+.darktheme .close {
   color: #ffffff;
 }
 
